# gfd

./: Cargo.toml  LICENSE  README.md  shader.gsh
.github/: dependabot.yml
examples/: json.rs
src/: lib.rs
tests/: header-only.gsh  parse.rs  program.gsh  vertex-header.gsh  vertex-program.gsh
