[package]
name = "gfd"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
description = "Read and write GFD shader binaries."

[features]
default = ["std"]
std = []

[dependencies]
byteorder = "1.5.0"
num_enum = "0.7.6"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.149"
